[tool.poetry]
name = "lab1-2"
version = "0.1.0"
description = ""
authors = ["elert.2020 <elert.2020@corp.nstu.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.3"
SQLite4 = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
